--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --accent-color: #2196f3;
   --secondary-background-color: #2f303a;
   --overlay-background-color: rgba(33, 150, 243, 0.9);
+  --modal-button-background-color: #188ce8;
   --paragraph-footer-color: #ffffff99;
   --section-background-teams-color: #f5f4fa;
   --border-hero-color: #ececec;
@@ -613,6 +614,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   min-width: 528px;
   min-height: 581px;
   background-color: var(--white-color);
@@ -649,6 +651,147 @@ img {
 .close-icon {
   fill: currentColor;
 }
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--title-color);
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.modal-label {
+  position: relative;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.modal-text {
+  display: block;
+  font-weight: 400;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.7;
+  letter-spacing: 0.01em;
+}
+
+.modal-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  font-size: 12px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+  transition: border-color 250ms var(--timing-function);
+}
+
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms var(--timing-function);
+}
+
+.modal-input:focus + .modal-icon {
+  fill: var(--accent-color);
+}
+
+.modal-comment {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms var(--timing-function);
+}
+
+.modal-comment:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-label:nth-child(4) {
+  margin-bottom: 20px;
+}
+
+.modal-checkbox {
+  display: flex;
+  align-items: center;
+  margin-left: 13px;
+  margin-bottom: 30px;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  flex-shrink: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  border-radius: 2px;
+}
+
+.checkbox-text {
+  font-size: 14px;
+  line-height: 1.7;
+  margin-right: 7px;
+}
+
+.checkbox-link {
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--accent-color);
+}
+
+.checkbox-icon {
+  display: inline-block;
+  border: 2px solid var(--title-color);
+  margin-right: 7px;
+  cursor: pointer;
+  transition: background-color 250ms var(--timing-function),
+    border-color 250ms var(--timing-function);
+}
+
+.checkbox:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  border-color: transparent;
+}
+
+.modal .send-button {
+  min-width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 10px 52px;
+
+  transition: background-color 250ms var(--timing-function);
+}
+
+.modal .send-button:hover,
+.modal .send-button:focus {
+  background-color: var(--modal-button-background-color);
+  color: var(--white-color);
+}
+
 /* ---------------- portfolio.html ---------------- */
 
 .portfolio-list-button {
