--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
     0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   --box-shadow-modal: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  --box-shadow-form-button: 0px 4px 4px rgba(0, 0, 0, 0.15);
   --primary-font-family: 'Roboto';
   --logo-font-family: 'Raleway';
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -586,6 +587,70 @@ img {
   background-color: var(--accent-color);
 }
 
+.footer-push {
+  margin-left: 93px;
+}
+
+.footer-title-push {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--white-color);
+}
+
+.footer-form {
+  display: flex;
+}
+
+.footer-label {
+  margin-right: 12px;
+}
+
+.footer-input {
+  width: 358px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  transition: border-color 250ms var(--timing-function),
+    outline 250ms var(--timing-function);
+}
+
+.footer-input::placeholder,
+.footer-input {
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-input:focus {
+  border-color: var(--accent-color);
+  outline: var(--accent-color);
+}
+
+.footer-push-btn {
+  min-width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 28px;
+  box-shadow: var(--box-shadow-form-button);
+  transition: background-color 250ms var(--timing-function);
+}
+
+.push-icon {
+  margin-left: 10px;
+}
+
+.footer-push-btn:hover,
+.footer-push-btn:focus {
+  background-color: var(--modal-button-background-color);
+  color: var(--white-color);
+}
+
 /* ---------------- Modal window ---------------- */
 
 .backdrop {
@@ -639,8 +704,6 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white-color);
   cursor: pointer;
-
-  transition: color 250ms var(--timing-function);
 }
 
 .close-button:hover,
@@ -782,6 +845,7 @@ img {
   align-items: center;
   margin: 0 auto;
   padding: 10px 52px;
+  box-shadow: var(--box-shadow-form-button);
 
   transition: background-color 250ms var(--timing-function);
 }
